--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -22,7 +22,7 @@ Thread. 객체의 start 메서드로  쓰레드를 실행해야 JVM에서 새로
 
 > start VS run
 > start 메서드를 호출하면 새로운 Thread가 생성되고 run 메서드 안의 코드는 새로운 Thread에서 실행된다. 
-> 반면에 run 메서드를 호출하면, 새로운 Thread가 생성되지 않고 run 메서드 안의 코드는 현재 Thread에서 동작하게 된를 호출한 후에는 run 멧더를 호출해서 JVM에서 코드를 실행하는데 필요한 새로운 스레드를 생성한다. 
+> 반면에 run 메서드를 호출하면, 새로운 Thread가 생성되지 않고 run 메서드 안의 코드는 현재 Thread에서 동작하게 된메서드를 호출한 후에는 run 멧더를 호출해서 JVM에서 코드를 실행하는데 필요한 새로운 스레드를 생성한다. 
 
 Thread 클래스는 병렬 실행이 가능한 쓰스레드를 만들 수 있도록 JVM을 호출한다는 점이 특별하다. start 메서드를 소스 코드에서 확인할 수 있다면 네이티브 메서드인 start메서드를0으로 호출하는 private 메서드 역시 확인할 수 있다. Thread 수행 순서를 결정하는 것은 전적으로  JVM이다. 
 
@@ -55,7 +55,13 @@ Runnable의 run 메서드는 return값이 없다. Callable의 call 메서드는 
 구체적으로는 TaskQueue에서 해당 Task를 관리하게 된다. Task Queue에 들어온 task는 Thread Pool에서 하나의 쓰레드가 맡아 처리한다. 작업 처리가 끝난 쓰레드는 Task Queue큐에서 새로운 task를 가져와 처리한다.
   
 Executors
-:가 멈추면 모든 쓰레드도 중지
+:-   쓰레드 풀을 사용(무거운 쓰레드는 미리 할당 가능)
+-   태스크와 쓰레드를 생성하고 관리하는 것을 분리
+	- 태스크(task == Runnable 한 구현체)
+-   쓰레드 풀안의 쓰레드는 한번에 하나씩 여러 태스크를 실행
+-   태스크 큐를 이용해 태스크 관리
+-   Executor Service를 더이상 필요 없으면 중지
+-   Executor Service가 멈추면 모든 쓰레드도 중지
 
 Executor 인터페이스
 : 주어진 Runnable객체(태스크)의 실행을 execute 메서드로 추상화 정의
@@ -107,11 +113,11 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjk2MTEyMTU3LDEzNjI2NTYxMjEsNzM1MT
-gwODQ4LDcwMTQzNjk2Nyw4NjY4MTAzLDEyNzI0NzA4MDUsLTM2
-MDQ0NDkyMSwtOTIzMzgwMTYyLDExMzYxNTMzMzMsLTQ2MjkzNj
-gyMyw3MTQzMjg2MSwtMTE1NTU5NDA1NywtMTEzMDI4NjMyNCwx
-MDkxMTcxMjgzLDEwODI3ODQyODUsLTU4MzI3MDkxMCwxNDg2Nj
-EzMjUsLTM2NjMzMDcwMywtMTQ1NjgzNzk5NCwtODU5OTYxMjMw
+eyJoaXN0b3J5IjpbLTI3OTA4NzY3Nyw2OTYxMTIxNTcsMTM2Mj
+Y1NjEyMSw3MzUxODA4NDgsNzAxNDM2OTY3LDg2NjgxMDMsMTI3
+MjQ3MDgwNSwtMzYwNDQ0OTIxLC05MjMzODAxNjIsMTEzNjE1Mz
+MzMywtNDYyOTM2ODIzLDcxNDMyODYxLC0xMTU1NTk0MDU3LC0x
+MTMwMjg2MzI0LDEwOTExNzEyODMsMTA4Mjc4NDI4NSwtNTgzMj
+cwOTEwLDE0ODY2MTMyNSwtMzY2MzMwNzAzLC0xNDU2ODM3OTk0
 XX0=
 -->
