--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -1,9 +1,11 @@
 # 16장 비트마스크
 
-컴퓨터는 기본적으로 
+컴퓨터는 기본적으로 이진수를 이용하기 때문에, 가끔씩 우리도 이진법을 이용하면  더 좋은 이점을 가질 수 있다. 
+
+정수의 이진수 표현을 자료 구조로 쓰는 기법을 비트마스크(bitmask)라 한다. 비트마스크는
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2Mzc5NTgzMTJdfQ==
+eyJoaXN0b3J5IjpbOTk5OTkwNjEzLC0xNjM3OTU4MzEyXX0=
 -->
