--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -2,10 +2,15 @@
 
 컴퓨터는 기본적으로 이진수를 이용하기 때문에, 가끔씩 우리도 이진법을 이용하면  더 좋은 이점을 가질 수 있다. 
 
-정수의 이진수 표현을 자료 구조로 쓰는 기법을 비트마스크(bitmask)라 한다. 비트마스크는
+정수의 이진수 표현을 자료 구조로 쓰는 기법을 비트마스크(bitmask)라 한다. 비트마스크는 엄밀히 말해 자료 구조라고 할 수는 없지만 굉장히 유용히 사용된다. 
+
+더 빠른 수행시간
+: 비트마스크 연산은 O(1)에 구현되는 것이 많기 때문에, 다른 자료 구조보다 훨씬 빨리 동작한다. 물론 비트마스크를 사용한다는 것은 원소의 수가 많지 않다는 뜻이라 엄청나게 큰 속도 향상을 기대할 수는 없지만, 같은
+
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTk5OTkwNjEzLC0xNjM3OTU4MzEyXX0=
+eyJoaXN0b3J5IjpbMTAyMTg1OTY2Miw5OTk5OTA2MTMsLTE2Mz
+c5NTgzMTJdfQ==
 -->
