--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -5,12 +5,15 @@
 정수의 이진수 표현을 자료 구조로 쓰는 기법을 비트마스크(bitmask)라 한다. 비트마스크는 엄밀히 말해 자료 구조라고 할 수는 없지만 굉장히 유용히 사용된다. 
 
 더 빠른 수행시간
-: 비트마스크 연산은 O(1)에 구현되는 것이 많기 때문에, 다른 자료 구조보다 훨씬 빨리 동작한다. 물론 비트마스크를 사용한다는 것은 원소의 수가 많지 않다는 뜻이라 엄청나게 큰 속도 향상을 기대할 수는 없지만, 같은
+: 비트마스크 연산은 O(1)에 구현되는 것이 많기 때문에, 다른 자료 구조보다 훨씬 빨리 동작한다. 물론 비트마스크를 사용한다는 것은 원소의 수가 많지 않다는 뜻이라 엄청나게 큰 속도 향상을 기대할 수는 없지만, 같은 연산을 굉장히 여러 번 수행해야 할 경우에는 작은 최적화도 큰 속도 향상을 가져올 수 있다.
+
+더 간결한 코드 
+: 다양한 집합 연산들을 반목문 없이 한 줄에 쓰기 때문에 적절히 사용하면 짧은 코드를 작성할 수 있다. 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAyMTg1OTY2Miw5OTk5OTA2MTMsLTE2Mz
+eyJoaXN0b3J5IjpbMTg2NTU5ODQ4MCw5OTk5OTA2MTMsLTE2Mz
 c5NTgzMTJdfQ==
 -->
