--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -11,12 +11,17 @@
 : 다양한 집합 연산들을 반목문 없이 한 줄에 쓰기 때문에 적절히 사용하면 짧은 코드를 작성할 수 있다. 
 
 더 작은 메모리 사용
-: 비트마스크 같은 코드를 이용하면 같은 데이터를 더 적은 메모리에 
+: 비트마스크 같은 코드를 이용하면 같은 데이터를 더 적은 메모리에 표현할 수 있다. 
+
+
+## 비트마스크 사용법
+
+
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MzY0MjA4NzAsMTg2NTU5ODQ4MCw5OT
-k5OTA2MTMsLTE2Mzc5NTgzMTJdfQ==
+eyJoaXN0b3J5IjpbODYwNjU0NTEwLDE4NjU1OTg0ODAsOTk5OT
+kwNjEzLC0xNjM3OTU4MzEyXX0=
 -->
