--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -19,11 +19,12 @@
 ### 비트 연산자
 
 
+![enter image description here](https://lh3.googleusercontent.com/proxy/q2jrYrA9rjj-TgLZeL6RMbq9RGKuo1E_ws3N_K1GO6iJP4iW40e5wrmiafZWGmNkuZ4KJfA9n5vRQaWl9tuXO1VEXPLr-C-V72qPgVmrAOQhpzBJ7Wf9cawRZxDziEc0a9yaqqyjtD8bDUBfOwzk3IRxew)
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzk0NDE0NTM3LC0zNDM4MjA3MDksMTg2NT
-U5ODQ4MCw5OTk5OTA2MTMsLTE2Mzc5NTgzMTJdfQ==
+eyJoaXN0b3J5IjpbLTcxNTM0MjgyMywtMzQzODIwNzA5LDE4Nj
+U1OTg0ODAsOTk5OTkwNjEzLC0xNjM3OTU4MzEyXX0=
 -->
