--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -23,7 +23,8 @@
 ### 시프트 연산자
 
 비트 열을 좌우로 지시한 만큼 이동시키는(shift) 연산자를 말한다.
-왼쪽 시프트 연산자 (<<)
+
+#### 왼쪽 시프트 연산자 (<<)
 
 ex) 150 << 2
 
@@ -34,17 +35,10 @@ ex) 150 << 2
 1 0 0 1 0 1 1 0 0 0 : 600
 
 위와 같은 결과. 왼쪽으로 두칸 밀면서, 비게 되는 오른쪽 두칸은 0으로 채운다.
-만약 데이터를 담는 자료형이 byte 타입이었다면, (8bit) 왼쪽으로 밀린 2개의 비트는 삭제됩니다.
-
-  
-
-그런 경우 다음과 같은 결과가 됩니다
-
+만약 데이터를 담는 자료형이 byte 타입이었다면, (8bit) 왼쪽으로 밀린 2개의 비트는 삭제된다. 그 결과 다음과 같은 결과가 된다.
 0 1 0 1 1 0 0 0 : 88
 
-  
-
-#### 2. 오른쪽 시프트 연산자 >>
+#### 오른쪽 시프트 연산자 >>
 
 ex) 150 >> 2
 
@@ -100,7 +94,7 @@ ex) 150 >> 2
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEzNTY5NDQ3NCwyMjA2NzY2MCwtNzE1Mz
+eyJoaXN0b3J5IjpbMTMwOTgxNzgzMywyMjA2NzY2MCwtNzE1Mz
 QyODIzLC0zNDM4MjA3MDksMTg2NTU5ODQ4MCw5OTk5OTA2MTMs
 LTE2Mzc5NTgzMTJdfQ==
 -->
