--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -26,12 +26,9 @@
 
 #### 왼쪽 시프트 연산자 (<<)
 
-ex) 150 << 2
-
-150 의 이진값을 왼쪽으로 2칸 시프트 합니다.
+ex) 150 << 2; 150 의 이진값을 왼쪽으로 2칸 시프트 합니다.
 
 1 0 0 1 0 1 1 0 : 150
-
 1 0 0 1 0 1 1 0 0 0 : 600
 
 위와 같은 결과. 왼쪽으로 두칸 밀면서, 비게 되는 오른쪽 두칸은 0으로 채운다.
@@ -40,19 +37,12 @@ ex) 150 << 2
 
 #### 오른쪽 시프트 연산자 >>
 
-ex) 150 >> 2
-
-150의 이진값을 오른쪽으로 2칸 시프트 합니다.
-
-  
+ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 
 1 0 0 1 0 1 1 0
-
 1 1 1 0 0 1 0 1 1 0
 
-  
-
-오른쪽으로 2비트 이동 한 후, 비게되는 왼쪽의 2개비트는 1로 채워지고, 오른쪽에서 2비트 넘어간 부분은 삭제됩니다.
+오른쪽으로 2비트 이동 한 후, 비게되는 왼쪽의 2개 비트는 1로 채워지고, 오른쪽에서 2비트 넘어간 부분은 삭제된다. 마찬가지로 8bit가 제한이라면
 
 따라서 결과는 아래가 됩니다.
 
@@ -94,7 +84,7 @@ ex) 150 >> 2
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMwOTgxNzgzMywyMjA2NzY2MCwtNzE1Mz
+eyJoaXN0b3J5IjpbLTk2NDczNTc2MywyMjA2NzY2MCwtNzE1Mz
 QyODIzLC0zNDM4MjA3MDksMTg2NTU5ODQ4MCw5OTk5OTA2MTMs
 LTE2Mzc5NTgzMTJdfQ==
 -->
